--- a/src/styles/components/Home/Profile.module.css
+++ b/src/styles/components/Home/Profile.module.css
@@ -19,6 +19,11 @@
   color: var(--title);
 }
 
+body.dark-mode .profileContainer div strong {
+  color: var(--midnight-blue);
+}
+
+
 .profileContainer div p {
   font-size: 1rem;
   margin-top: 0.5rem;
