--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,8 @@
   --black: #000;
   --grey: #1C1C1C;
   --soft-grey: #363636;
+  --indigo: #4B0082;
+  --midnight-blue: #fff;
 }
 
 * {
@@ -90,7 +92,7 @@ a {
   font-size: 0px;
 }
 
-.dark-mode {
+body.dark-mode {
   background-color: var(--black);
   color: var(--white);
 }
