--- a/src/styles/components/Home/ChallengeBox.module.css
+++ b/src/styles/components/Home/ChallengeBox.module.css
@@ -14,6 +14,10 @@
   text-align: center;
 }
 
+:global(body.dark-mode) .challengeBoxContainer {
+  background: var(--grey);
+}
+
 .challengeNotActive {
   display: flex;
   flex-direction: column;
@@ -53,8 +57,8 @@
   border-bottom: 1px solid var(--gray-line);
 }
 
-body.dark-mode .challengeActive header {
-  color: var(--indigo);
+:global(body.dark-mode) .challengeActive header {
+  color: var(--slate-blue);
 }
 
 .challengeActive main {
@@ -70,6 +74,10 @@ body.dark-mode .challengeActive header {
   font-size: 2rem;
   color: var(--title);
   margin: 1.5rem;
+}
+
+:global(body.dark-mode) .challengeActive main strong {
+  color: var(--dodger-blue);
 }
 
 .challengeActive main p {
