--- a/src/styles/components/Home/ExperienceBar.module.css
+++ b/src/styles/components/Home/ExperienceBar.module.css
@@ -20,7 +20,7 @@
   height: 4px;
   border-radius: 4px;
   background: var(--green);
-  transition: width 4px;
+  transition: width 0.5s ease;
 }
 
 :global(body.dark-mode) .experienceBar > div > div {
@@ -31,4 +31,5 @@ span.currentExperience {
   position: absolute;
   top: 12px;
   transform: translateX(-50%);
+  transition: left 0.5 ease;
 }
