--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,11 +10,13 @@
   --blue: #5965E0;
   --blue-dark: #4953B8;
   --blue-twitter: #2AA9E0;
+  --gold: #FFD700;
 
   --black: #000;
   --grey: #1C1C1C;
   --soft-grey: #363636;
   --indigo: #4B0082;
+  --purple: #A020F0;
   --royal-blue: #4169E1;
   --dark-slate-blue: #483D8B;
   --slate-blue: #6959CD;
@@ -65,12 +67,6 @@ a {
 
   display: flex;
   flex-direction: column;
-}
-
-.logo-full {
-  position: fixed;
-  top: 1.5rem;
-  left: 1.5rem;
 }
 
 .logo-icon {
