Working on GitHub OAuth

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,6 +17,7 @@
   --soft-grey: #363636;
   --indigo: #4B0082;
   --purple: #A020F0;
+  --dark-magenta: #8B008B;
   --royal-blue: #4169E1;
   --dark-slate-blue: #483D8B;
   --slate-blue: #6959CD;
