--- a/src/styles/components/Login/LoginBox.module.css
+++ b/src/styles/components/Login/LoginBox.module.css
@@ -83,6 +83,7 @@
   background: linear-gradient(to right, var(--blue-dark), var(--blue));
   border: 0;
   border-radius: 5px 0 0 5px;
+  outline: 0;
 }
 
 :global(body.dark-mode) .section input {
@@ -103,6 +104,10 @@
   background: var(--green);
   border: 0;
   border-radius: 0 5px 5px 0;
+}
+
+:global(body.dark-mode) .section button {
+  background: var(--dark-magenta);
 }
 
 .section button > img {
